// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer: byId adds new topic by id to empty state 1`] = `
Object {
  "2": Object {
    "id": 2,
    "name": "random name",
  },
}
`;

exports[`reducer: byId adds new topic by id to existing state 1`] = `
Object {
  "2": Object {
    "id": 2,
    "name": "random name",
  },
  "33": Object {
    "id": 33,
    "name": "other 33 topic",
  },
}
`;
